--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
 mybatis.type-aliases-package=com.example.mnm.domain
-# mybatis.mapper-locations=com/example/mnm/dao/mybatis/mapper/**/*.xml
+mybatis.mapper-locations=com/example/mnm/dao/mybatis/mapper/**/*.xml
 
 spring.devtools.livereload.enabled=true
 
