[ADD] 경매 아이템등록/수정/삭제/목록/상세보기/낙찰/입찰/즉시구매

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,12 @@ spring.datasource.password=sd0101
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
+# Thymeleaf views
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
+spring.thymeleaf.view-names=thyme/*
+
 mybatis.type-aliases-package=com.example.mnm.domain
 mybatis.mapper-locations=com/example/mnm/dao/mybatis/mapper/**/*.xml
 
