--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
 		    <version>2.4</version>
 		    <classifier>jdk15</classifier>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-websocket</artifactId>
+			<version>4.2.4.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
