[UPDATE] pom.xml 수정, 포트 번호 주석 처리

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,4 +43,4 @@ spring.devtools.livereload.enabled=true
 
 logging.level.com.example.jpetstore.dao.mybatis.mapper=DEBUG
 
-server.port=8088
+#server.port=8088
